# OpenGL-Learning

./: CMakeLists.txt  README.md
include/: BufferObject.hpp  Camera.hpp  GLFWWindow.hpp  Image.hpp  Shader.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
notes/: 三角形.md  环境配置.md  纹理.md
src/: fpsmove.cpp  rectangle.cpp  test.cpp  triangle.cpp  triangle_with_texture.cpp
src/shader/: fps.frag
